--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	  <meta name="robots" content="noindex,nofollow">
-      <title>Shortly - Free HTML Coming Soon Page</title>
-	  <meta name="description" content="">
+	  <meta name="robots" content="index, follow">
+      <title>Wealth Camp Events</title>
+	  <meta name="description" content="Wealth Camp Events is a top event planning and management company in Uganda specializing in corporate events, conferences, and private gatherings. We create, organize, and host unforgettable experiences for businesses and individuals. Contact us for professional event services.">
+
       <link rel="icon" href="assets/images/favicon.png" sizes="32x32" />
       <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,500,600,700,700i,800,800i,900,900i" rel="stylesheet">
       <link href="assets/css/style.css" rel="stylesheet">
