--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <nav class="mainmenu mobile-menu">
                     <ul class="">
                         <li class="active"><a href="./index.html">Home</a></li>
-                        <li><a href="./about-us.html">About</a></li>
+                        <li><a href="#">About</a></li>
 <!--                        <li><a href="./speaker.html">Speakers</a>-->
 <!--                            <ul class="dropdown">-->
 <!--                                <li><a href="#">Jayden</a></li>-->
@@ -55,7 +55,7 @@
 <!--                        </li>-->
 <!--                        <li><a href="./schedule.html">Schedule</a></li>-->
 <!--                        <li><a href="./blog.html">Blog</a></li>-->
-                        <li><a href="./contact.html">Contacts</a></li>
+                        <li><a href="#">Contacts</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="primary-btn top-btn"><i class="fa fa-ticket"></i> Ticket</a>
